--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/followers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/following"
+        app:layout_constraintVertical_bias="0.035" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/followers"
         android:layout_width="408dp"
@@ -22,26 +34,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username: "
+        android:textColor="#000"
         app:layout_constraintBottom_toTopOf="@+id/followers"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toEndOf="@+id/mainUserimage"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="#000"
-        app:layout_constraintVertical_bias="0.144" />
+        app:layout_constraintVertical_bias="0.162" />
 
     <TextView
         android:id="@+id/repos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Repos: "
+        android:textColor="#000"
         app:layout_constraintBottom_toTopOf="@+id/followers"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintHorizontal_bias="0.104"
         app:layout_constraintStart_toEndOf="@+id/mainUserimage"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        android:textColor="#000"
-        app:layout_constraintVertical_bias="0.052" />
+        app:layout_constraintVertical_bias="0.053" />
 
     <TextView
         android:id="@+id/following"
